# databonk

./: .dockerignore  .eslintrc.json  CHANGELOG.md  DOCKER.md  Dockerfile  Makefile  README.md  asconfig.json  databonk-0.2.0.tgz  dataframe-lib-spec.md  docker-compose.dev.yml  docker-compose.yml  jest.config.json  package-lock.json  package.json  rollup.config.js  tsconfig.json  tsup.config.ts  typedoc.json  vitest.config.ts
assembly/: index.ts
assembly/core/: numeric-column.ts  schema.ts  string-column.ts  validity-bitmap.ts
assembly/dataframe/: builder.ts  dataframe.ts
assembly/memory/: allocator.ts  shared.ts
assembly/ops/: aggregations.ts  arithmetic.ts  groupby.ts  join.ts
assembly/simd/: simd-aggregations.ts  simd-arithmetic.ts  simd-utils.ts
bench/: datasets.mjs  run.mjs
bench/baselines/: arquero.json  arquero.mjs  arrayobj.json  arrayobj.mjs  census-v0.json  danfo.json  danfo.mjs  (+5 more)
contracts/: dtypes.md  memory.d.ts  wasm-abi.md
docs/: api.md  bundlers.md  examples.md  status.md  threads.md
examples/: basic.ts  benchmark-comparison.ts  performance-browser.js  performance-test.html  performance-test.mjs  performance-test.ts  schema-validation.ts
scripts/: check-readme.mjs  check-regression.mjs  check-size.mjs  copy-wasm.mjs
src/: dataframe.ts  index.ts  loader.ts  shared-memory.ts
tests/: aggregation.test.ts  column.test.ts  csv.test.ts  dataframe.test.ts  groupby.test.ts  index.test.ts  join.test.ts  schema.test.ts
wasm/rust/: Cargo.toml  build.sh
wasm/rust/src/: arena.rs  elementwise.rs  hash.rs  lib.rs  reduce.rs  select.rs
(+174 files in other folders)
